--- a/src/app/views/features/quote/view-quote/view-quote.component.html
+++ b/src/app/views/features/quote/view-quote/view-quote.component.html
@@ -113,9 +113,9 @@
                       <label>報價條列項目 {{quote_product.length}}</label>
                     </div>
                     <div class="justify-content-end">
-                      <p-button icon="pi pi-plus" pTooltip="新增產品" (click)="addProduct()" tooltipPosition="top"
+                      <p-button icon="pi pi-plus" pTooltip="新增商品/服務" (click)="addProduct()" tooltipPosition="top"
                         styleClass="p-button-text"></p-button>
-                      <p-button icon="pi pi-pencil" pTooltip="編輯所有報價產品" (click)="editProduct()" tooltipPosition="top"
+                      <p-button icon="pi pi-pencil" pTooltip="編輯所有報價商品/服務" (click)="editProduct()" tooltipPosition="top"
                         styleClass="p-button-text"></p-button>
                     </div>
                   </div>
