--- a/src/app/views/features/account/account.component.html
+++ b/src/app/views/features/account/account.component.html
@@ -10,7 +10,8 @@
       </div>
       <p-menu #menu [model]="account_type" [popup]="true"></p-menu>
       <p-table #dt [value]="getData" [lazy]="true" [totalRecords]="total" [rows]="10" [paginator]="true"
-               (onLazyLoad)="loadTable($event)" [globalFilterFields]="['name']">
+               (onLazyLoad)="loadTable($event)" [globalFilterFields]="['name']" [loading]="loading"
+               [rowsPerPageOptions]="[10, 20]" currentPageReportTemplate="共 {totalRecords} 筆" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
           <div class="flex">
             <span class="p-input-icon-left ml-auto">
