--- a/src/app/views/features/product/product.component.html
+++ b/src/app/views/features/product/product.component.html
@@ -7,10 +7,10 @@
           <p-button (click)="showDialog('add')" icon="pi pi-plus" styleClass="p-button-text"></p-button>
         </span>
       </div>
-      <p-table [rowsPerPageOptions]="[5, 10, 15]" [value]="GetAllProduct" [paginator]="true" #dt1
+      <p-table [rowsPerPageOptions]="[10, 15]" [value]="GetAllProduct" [paginator]="true" #dt1
                [rows]="5" [totalRecords]="totalRecords" [lazy]="true" (onLazyLoad)="loadTable($event)"
-               [showCurrentPageReport]="true" [(first)]="first"
-               currentPageReportTemplate="從 {first} 到 {last} 筆，共 {totalRecords} 筆">
+               [showCurrentPageReport]="true" [(first)]="first" [loading]="loading"
+               currentPageReportTemplate="共 {totalRecords} 筆">
         <ng-template pTemplate="caption">
           <div class="flex">
             <span class="p-input-icon-left ml-auto">
