feat: 全天事件改成switch

--- a/src/app/views/features/event/event.component.html
+++ b/src/app/views/features/event/event.component.html
@@ -59,7 +59,7 @@
         <div class="field">
           <label>全天事件</label>
           <div class="col-12">
-            <p-checkbox formControlName="allday" value="allday" [binary]="true"></p-checkbox>
+            <p-inputSwitch formControlName="allday"></p-inputSwitch>
           </div>
         </div>
       </div>
